force-app/main/default/objects/Amendment_Opp_Data__c/Amendment_Opp_Data__c.object-meta.xml
<CustomObject>
    <label>Amendment Opp Data</label>
    <nameField>
        <displayFormat>AOD-{0000}</displayFormat>
        <label>Amendment Opp Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Amendment Opp Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>