force-app/main/default/objects/Amendment_Opp_Data__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Amendment Opp Data</relationshipLabel>
    <relationshipName>Amendment_Opp_Data</relationshipName>
    <type>Lookup</type>
</CustomField>