force-app/main/default/objects/Amendment_Opp_Data__c/fields/Site_Id__c.field-meta.xml
<CustomField>
    <fullName>Site_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Site Id</label>
    <referenceTo>Site__c</referenceTo>
    <relationshipLabel>Amendment Opp Data</relationshipLabel>
    <relationshipName>Amendment_Opp_Data</relationshipName>
    <type>Lookup</type>
</CustomField>