force-app/main/default/objects/Amendment_Opp_Data__c/fields/Volume__c.field-meta.xml
<CustomField>
    <fullName>Volume__c</fullName>
    <label>Volume</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>